# FOGT_23Z_Zintegrowane

./: README.md  pyproject.toml
notebooks/: kwanty.ipynb
